...
    <string name="str_7_day_history">"7-DAY HISTORY"</string>
    <string name="cpu">"↓ CPU"</string>
    <string name="mem">"↓ MEM"</string>
    <string name="cpu_2">"CPU"</string>
    <string name="mem_2">"MEM"</string>
    <string name="live">"LIVE"</string>
    <string name="dismiss">"Dismiss"</string>
    <string name="compose_builder">"Compose Builder"</string>
    <string name="new_clear">"New / Clear"</string>
    <string name="compose_file">"COMPOSE FILE"</string>
    <string name="editing_the_file_directly_nothing_is">"Editing the file directly. Nothing is changed until you deploy, and the file is validated first."</string>
    <string name="stack_name_compose_name_key_optional">"Stack name (compose name: key, optional)"</string>
    <string name="e_g_example_stack">"e.g. example_stack"</string>
    <string name="preview">"Preview"</string>
...
